--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ Carthage
 log
 tmp
 .pid
+pacts
 
 # We recommend against adding the Pods directory to your .gitignore. However
 # you should judge for yourself, the pros and cons are mentioned at:
