--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ env:
 before_install:
   - scripts/import_keychain.sh
   - security find-identity -v -p codesigning
-  - bundle update --bundler
+  - gem update --system
+  - gem install bundler
   - bundle install
   - brew update && brew bundle
   - carthage checkout
