Refactor pact mock server network calling code and upgrade to swift 5 (#53)
* Gets the project built

Update base proejct to Swift5 and targets to use undefined swift version (inherit from base project)

* Update travisCI config to run Xcode10.2 with swift 5

* Fixes the enum empty value error

* Update README [skip-ci]

Install pact-mock-service using homebrew

* Sepcify Swift version 5 for tvOS and macOS

* Remove unused import

* Update Swiftlint rules

- set `line_length` warning and error
- exclude keywords for HTTP Methods from identifier_name

* Add Separated NetworkLayer

Removes dependency on Alamofire

* Removes Alamofire

* Remove Alamofire from Xcode Project and dep managers

* Add Network Layer files to list of Compiled Sources

* Clean up Project file

* Update CI step to run mock from brew tap

* Update Swiftlint rules

- set `line_length` warning and error
- exclude keywords for HTTP Methods from identifier_name

* Add Separated NetworkLayer

Removes dependency on Alamofire

* Removes Alamofire

* Remove Alamofire from Xcode Project and dep managers

* Add Network Layer files to list of Compiled Sources

* Clean up Project file

* Update CI step to run mock from brew tap

* Add flag to enable networkLogging

Initialising `PactVerificationService` wtih `networkLogging = true` will display calls and responses to the Pact Mock Service to help with debugging of url requests and data passed between the client and provider.

* Update build script to exit at non-zero status from a cmd

* Update CI to use pact-foundation tap for pact-ruby-standalone

* Resolves outdated SwiftPM packages

* Documentation style comments for public methods

* Update README.md

* Remove redundant hardcoded header value

* Set code indentation to 2 spaces

* Changed indentation to 2 spaces

* Remove trailing empty lines

* Remove duplicated swiftlint identifer_name rules

* Rename Endpoint API to PactMo

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -15,6 +15,9 @@ force_try:
 type_body_length:
   - 300 # warning
   - 400 # error
+line_length:
+  warning: 128
+  error: 156
 file_length:
   warning: 500
   error: 1200
@@ -30,8 +33,11 @@ identifier_name:
     - id
     - URL
     - url
-    - GET
-    - PUT
     - min
     - max
+    - key
+    - GET
+    - PUT
+    - get
+    - put
 reporter: "xcode"
