added some additional debug for failure to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ before_install:
 script:
   - set -o pipefail
   - scripts/build.sh
+after_failure:
+  - cat $TMPDIR/carthage-*.log
 after_success:
   - bash <(curl -s https://codecov.io/bash) -J 'PactConsumerSwift'
   - scripts/build_children.sh
