--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,10 @@ env:
     - DESTINATION="OS=12.0,name=iPhone X"   SCHEME="$IOS_FRAMEWORK_SCHEME"       CARTHAGE_PLATFORM="iOS"
     - DESTINATION="OS=11.3,name=iPhone 8"   SCHEME="$IOS_FRAMEWORK_SCHEME"       CARTHAGE_PLATFORM="iOS"
 before_install:
-  - scripts/install_deps.sh
+  - gem install xcpretty
+  - brew update && brew bundle
+  - brew outdated carthage || brew upgrade carthage
+  - carthage bootstrap
 script:
   - set -o pipefail
   - scripts/build.sh
