tech: Run workflow matrix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,14 +10,28 @@ on:
     branches: [master]
 
 jobs:
-  test_ios:
-    name: Run iOS tests
+  test_xcodebuild:
+    name: Run tests
     runs-on: macOS-latest
 
+    strategy:
+      fail-fast: true
+      matrix:
+        include:
+          - scheme: "PactConsumerSwift iOS"
+            destination: "platform=iOS Simulator,name=iPhone 12 Pro"
+            carthage_platform: ios
+          - scheme: "PactConsumerSwift macOS"
+            destination: "arch=x86_64"
+            carthage_platform: macos
+          - scheme: "PactConsumerSwift tvOS"
+            destination: "OS=11.0,name=Apple TV 4K (at 1080p)"
+            carthage_platform: tvos
+
     env:
-      SCHEME: "PactConsumerSwift iOS"
-      DESTINATION: "platform=iOS Simulator,name=iPhone 12 Pro"
-      CARTHAGE_PLATFORM: "ios"
+      SCHEME: ${{ matrix.scheme }}
+      DESTINATION: ${{ matrix.destination }}
+      CARTHAGE_PLATFORM: ${{ matrix.carthage_platform }}
 
     steps:
       - name: Checkout repository
@@ -49,41 +63,6 @@ jobs:
         run: |
           bash <(curl -s https://codecov.io/bash) -J 'PactConsumerSwift'
 
-  test_macos:
-    name: Run macOS tests
-    runs-on: macOS-latest
-
-    env:
-      SCHEME: "PactConsumerSwift macOS"
-      DESTINATION: "arch=x86_64"
-      CARTHAGE_PLATFORM: "macos"
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
-
-      - name: Use Xcode 12.2
-        run: sudo xcode-select -switch /Applications/Xcode_12.2.app
-
-      - name: "Cache dependencies"
-        uses: actions/cache@v2
-        with:
-          path: Carthage/build
-          key: ${{ runner.os }}-pact-${{ hashFiles('**/Cartfile.resolved') }}
-          restore-keys: |
-            ${{ runner.os }}-pact-
-            ${{ runner.os }}-
-
-      - name: Prepare the tools
-        run: |
-          scripts/install_deps.sh
-
-      - name: "Run tests"
-        run: |
-          scripts/build.sh
-
   test_spm:
     name: Test for SPM compatibility
     runs-on: macOS-latest
@@ -102,7 +81,7 @@ jobs:
           swift build
 
   test_carthage:
-    needs: [test_ios, test_macos]
+    needs: [test_xcodebuild]
     name: "Test Carthage dependency"
     runs-on: macOS-latest
 
@@ -121,12 +100,15 @@ jobs:
 
       - name: Carthage build
         run: |
-          carthage build --no-skip-current --platform=ios,macos,tvos
+          scripts/carthage_xcode12 build --no-skip-current --platform=ios,macos,tvos
 
   after_success:
-    needs: [test_ios, test_macos, test_spm, test_carthage]
+    needs: [test_xcodebuild, test_spm, test_carthage]
     name: "Build example projects"
     runs-on: ubuntu-20.04
+
+    env:
+      AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
 
     steps:
       - name: Checkout repository
