--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,7 @@ name: Continuous Integration
 env:
   PROJECT_NAME: "PactConsumerSwift.xcodeproj"
 
-on:
-  push:
-    branches: [master, release/*]
-  pull_request:
-    branches: [master]
+on: [push, pull_request]
 
 jobs:
   test_xcodebuild:
