--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,27 +1,27 @@
-name: Build
+name: Build (Xcode 13.6)
 
 env:
   PROJECT_NAME: "PactConsumerSwift.xcodeproj"
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   test_xcodebuild:
     name: Run tests
-    runs-on: macOS-latest
+    runs-on: macOS-10.15
 
     strategy:
       fail-fast: true
       matrix:
         include:
           - scheme: "PactConsumerSwift iOS"
-            destination: "platform=iOS Simulator,name=iPhone 12 Pro"
+            destination: "platform=iOS Simulator,name=iPhone 8,OS=13.6"
             carthage_platform: ios
           - scheme: "PactConsumerSwift macOS"
             destination: "arch=x86_64"
             carthage_platform: macos
           - scheme: "PactConsumerSwift tvOS"
-            destination: "OS=14.2,name=Apple TV 4K (at 1080p)"
+            destination: "OS=13.4,name=Apple TV 4K (at 1080p)"
             carthage_platform: tvos
 
     env:
@@ -35,8 +35,8 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Use Xcode 12.2
-        run: sudo xcode-select -switch /Applications/Xcode_12.2.app
+      - name: Use Xcode 11.6
+        run: sudo xcode-select -switch /Applications/Xcode_11.6.app
 
       - name: "Cache dependencies"
         uses: actions/cache@v2
@@ -47,13 +47,19 @@ jobs:
             ${{ runner.os }}-pact-
             ${{ runner.os }}-
 
+      # Manually running install tools instead of scripts/install_deps.sh
+      # xcbeautify tool referenced in install_deps.sh script requires Xcode 12.2.
       - name: Prepare the tools
         run: |
-          scripts/install_deps.sh
+          brew update && brew bundle
+          carthage checkout
 
+      # Manually running xcodebuild instead of scripts/build.sh
+      # xcbeautify tool referenced in build.sh script requires Xcode 12.2.
       - name: "Run tests"
         run: |
-          scripts/build.sh
+          ./scripts/carthage_xcode12 update --platform $CARTHAGE_PLATFORM
+          set -o pipefail && xcodebuild clean test -project $PROJECT_NAME -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES
 
       - name: "Upload code coverage"
         run: |
@@ -61,7 +67,7 @@ jobs:
 
   test_spm:
     name: Test for SPM compatibility
-    runs-on: macOS-latest
+    runs-on: macOS-10.15
 
     steps:
       - name: Checkout repository
@@ -69,8 +75,8 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Use Xcode 12.2
-        run: sudo xcode-select -switch /Applications/Xcode_12.2.app
+      - name: Use Xcode 11.6
+        run: sudo xcode-select -switch /Applications/Xcode_11.6.app
 
       - name: Swift build
         run: |
@@ -80,7 +86,7 @@ jobs:
   test_carthage:
     needs: [test_xcodebuild]
     name: "Test Carthage dependency"
-    runs-on: macOS-latest
+    runs-on: macOS-10.15
 
     steps:
       - name: Checkout repository
@@ -88,8 +94,8 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Use Xcode 12.2
-        run: sudo xcode-select -switch /Applications/Xcode_12.2.app
+      - name: Use Xcode 11.6
+        run: sudo xcode-select -switch /Applications/Xcode_11.6.app
 
       - name: "Cache dependencies"
         uses: actions/cache@v2
@@ -102,26 +108,9 @@ jobs:
 
       - name: Prepare Tools
         run: |
-          scripts/install_deps.sh
+          brew update && brew bundle
+          carthage checkout
 
       - name: Carthage build
         run: |
-          scripts/carthage_xcode12 build --no-skip-current --platform "ios,macos,tvos"
-
-  after_success:
-    needs: [test_xcodebuild, test_spm, test_carthage]
-    name: "Build example projects"
-    runs-on: ubuntu-20.04
-
-    env:
-      AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
-
-      - name: Trigger Demo Project builds
-        run: |
-          scripts/build_children.sh
+          carthage build --no-skip-current --platform "ios,macos,tvos"
