chore: Add workflow dispatch option

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build
 env:
   PROJECT_NAME: "PactConsumerSwift.xcodeproj"
 
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   test_xcodebuild:
