--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,7 +108,7 @@ jobs:
           scripts/carthage_xcode12 build --no-skip-current --platform "ios,macos,tvos"
 
   after_success:
-    needs: [test_xcodebuild, test_spm, test_carthage]
+    #needs: [test_xcodebuild, test_spm, test_carthage]
     name: "Build example projects"
     runs-on: ubuntu-20.04
 
@@ -120,10 +120,8 @@ jobs:
 
       - name: Trigger Demo Project builds
         run: |
-          MSG=$(git log --format=%B -n 1 | head -1)
-          echo "::set-env name=COMMIT_MESSAGE::${MSG}"
           scripts/build_children.sh
         env:
           AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
           GH_BUILD_CHILDREN_TOKEN: ${{ secrets.GH_BUILD_CHILDREN_TOKEN }}
-
+          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
