--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,13 @@ name: Build
 env:
   PROJECT_NAME: "PactConsumerSwift.xcodeproj"
 
-on: [push, pull_request, workflow_dispatch]
+on:
+  push:
+    branches:
+      - main
+      - master
+      - 'release/**'
+  workflow_dispatch:
 
 jobs:
   test_xcodebuild:
@@ -60,7 +66,7 @@ jobs:
           bash <(curl -s https://codecov.io/bash) -J 'PactConsumerSwift'
 
   test_spm:
-    name: Test for SPM compatibility
+    name: Test for SPM
     runs-on: macOS-latest
 
     steps:
@@ -108,7 +114,7 @@ jobs:
           scripts/carthage_xcode12 build --no-skip-current --platform "ios,macos,tvos"
 
   after_success:
-    #needs: [test_xcodebuild, test_spm, test_carthage]
+    needs: [test_xcodebuild, test_spm, test_carthage]
     name: "Build example projects"
     runs-on: ubuntu-20.04
 
