--- a/.github/workflows/pull_request_xcode13_6.yml
+++ b/.github/workflows/pull_request_xcode13_6.yml
@@ -1,27 +1,27 @@
-name: Pull Request
+name: Pull Request (Xcode 13.6)
 
 env:
   PROJECT_NAME: "PactConsumerSwift.xcodeproj"
 
-on: [pull_request]
+on: [pull_request, workflow_dispatch]
 
 jobs:
   test_xcodebuild:
     name: Run tests
-    runs-on: macOS-latest
+    runs-on: macOS-10.15
 
     strategy:
       fail-fast: true
       matrix:
         include:
           - scheme: "PactConsumerSwift iOS"
-            destination: "platform=iOS Simulator,name=iPhone 12 Pro"
+            destination: "platform=iOS Simulator,name=iPhone 8,OS=13.6"
             carthage_platform: ios
           - scheme: "PactConsumerSwift macOS"
             destination: "arch=x86_64"
             carthage_platform: macos
           - scheme: "PactConsumerSwift tvOS"
-            destination: "OS=14.2,name=Apple TV 4K (at 1080p)"
+            destination: "OS=13.4,name=Apple TV 4K (at 1080p)"
             carthage_platform: tvos
 
     env:
@@ -35,8 +35,8 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Use Xcode 12.2
-        run: sudo xcode-select -switch /Applications/Xcode_12.2.app
+      - name: Use Xcode 11.6
+        run: sudo xcode-select -switch /Applications/Xcode_11.6.app
 
       - name: "Cache dependencies"
         uses: actions/cache@v2
@@ -47,17 +47,27 @@ jobs:
             ${{ runner.os }}-pact-
             ${{ runner.os }}-
 
+      # Manually running install tools instead of scripts/install_deps.sh
+      # Tools referenced in install_deps.sh script require Xcode 12.2 on macOS 10.15.
       - name: Prepare the tools
         run: |
-          scripts/install_deps.sh
+          brew update && brew bundle
+          carthage checkout
 
+      # Manually running xcodebuild instead of scripts/build.sh
+      # Tools referenced in install_deps.sh script require Xcode 12.2 on macOS 10.15.
       - name: "Run tests"
         run: |
-          scripts/build.sh
+          ./scripts/carthage_xcode12 update --platform $CARTHAGE_PLATFORM
+          set -o pipefail && xcodebuild clean test -project $PROJECT_NAME -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES
+
+      - name: "Upload code coverage"
+        run: |
+          bash <(curl -s https://codecov.io/bash) -J 'PactConsumerSwift'
 
   test_spm:
-    name: Test for SPM
-    runs-on: macOS-latest
+    name: Test for SPM compatibility
+    runs-on: macOS-10.15
 
     steps:
       - name: Checkout repository
@@ -65,8 +75,8 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Use Xcode 12.2
-        run: sudo xcode-select -switch /Applications/Xcode_12.2.app
+      - name: Use Xcode 11.6
+        run: sudo xcode-select -switch /Applications/Xcode_11.6.app
 
       - name: Swift build
         run: |
@@ -75,7 +85,7 @@ jobs:
 
   test_carthage:
     name: "Test Carthage dependency"
-    runs-on: macOS-latest
+    runs-on: macOS-10.15
 
     steps:
       - name: Checkout repository
@@ -83,8 +93,8 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Use Xcode 12.2
-        run: sudo xcode-select -switch /Applications/Xcode_12.2.app
+      - name: Use Xcode 11.6
+        run: sudo xcode-select -switch /Applications/Xcode_11.6.app
 
       - name: "Cache dependencies"
         uses: actions/cache@v2
@@ -97,8 +107,9 @@ jobs:
 
       - name: Prepare Tools
         run: |
-          scripts/install_deps.sh
+          brew update && brew bundle
+          carthage checkout
 
       - name: Carthage build
         run: |
-          scripts/carthage_xcode12 build --no-skip-current --platform "ios,macos,tvos"
+          carthage build --no-skip-current --platform "ios,macos,tvos"
