--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   test_xcodebuild:
     name: Run tests
-    runs-on: macOS-latest
+    runs-on: macOS-10.15
 
     strategy:
       fail-fast: true
@@ -40,9 +40,6 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Use Xcode 12.2
-        run: sudo xcode-select -switch /Applications/Xcode_12.2.app
-
       - name: "Cache dependencies"
         uses: actions/cache@v2
         with:
@@ -66,16 +63,13 @@ jobs:
 
   test_spm:
     name: Test for SPM
-    runs-on: macOS-latest
+    runs-on: macOS-10.15
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
         with:
           submodules: recursive
-
-      - name: Use Xcode 12.2
-        run: sudo xcode-select -switch /Applications/Xcode_12.2.app
 
       - name: Swift build
         run: |
@@ -84,16 +78,13 @@ jobs:
 
   test_carthage:
     name: "Test Carthage dependency"
-    runs-on: macOS-latest
+    runs-on: macOS-10.15
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
         with:
           submodules: recursive
-
-      - name: Use Xcode 12.2
-        run: sudo xcode-select -switch /Applications/Xcode_12.2.app
 
       - name: "Cache dependencies"
         uses: actions/cache@v2
