--- a/.github/workflows/build_bigsur.yml
+++ b/.github/workflows/build_bigsur.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build (Big Sur)
 
 env:
   PROJECT_NAME: "PactConsumerSwift.xcodeproj"
@@ -13,7 +13,7 @@ on:
 jobs:
   test_xcodebuild:
     name: Run tests
-    runs-on: macOS-10.15
+    runs-on: macOS-11
 
     strategy:
       fail-fast: true
@@ -63,7 +63,7 @@ jobs:
 
   test_spm:
     name: Test for SPM
-    runs-on: macOS-10.15
+    runs-on: macOS-11
 
     steps:
       - name: Checkout repository
@@ -78,7 +78,7 @@ jobs:
 
   test_carthage:
     name: "Test Carthage dependency"
-    runs-on: macOS-10.15
+    runs-on: macOS-11
 
     steps:
       - name: Checkout repository
@@ -102,22 +102,3 @@ jobs:
       - name: Carthage build
         run: |
           scripts/carthage_xcode12 build --no-skip-current --platform "ios,macos,tvos"
-
-  after_success:
-    needs: [test_xcodebuild, test_spm, test_carthage]
-    name: "Build example projects"
-    runs-on: ubuntu-20.04
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
-
-      - name: Trigger Demo Project builds
-        run: |
-          scripts/build_children.sh
-        env:
-          AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
-          GH_BUILD_CHILDREN_TOKEN: ${{ secrets.GH_BUILD_CHILDREN_TOKEN }}
-          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
