--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,4 +1,4 @@
-name: Build (Xcode 13.6)
+name: Pull Request
 
 env:
   PROJECT_NAME: "PactConsumerSwift.xcodeproj"
@@ -15,13 +15,13 @@ jobs:
       matrix:
         include:
           - scheme: "PactConsumerSwift iOS"
-            destination: "platform=iOS Simulator,name=iPhone 8,OS=13.6"
+            destination: "platform=iOS Simulator,name=iPhone 12 Pro"
             carthage_platform: ios
           - scheme: "PactConsumerSwift macOS"
             destination: "arch=x86_64"
             carthage_platform: macos
           - scheme: "PactConsumerSwift tvOS"
-            destination: "OS=13.4,name=Apple TV 4K (at 1080p)"
+            destination: "OS=14.2,name=Apple TV 4K (at 1080p)"
             carthage_platform: tvos
 
     env:
@@ -35,9 +35,6 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Use Xcode 11.6
-        run: sudo xcode-select -switch /Applications/Xcode_11.6.app
-
       - name: "Cache dependencies"
         uses: actions/cache@v2
         with:
@@ -47,26 +44,16 @@ jobs:
             ${{ runner.os }}-pact-
             ${{ runner.os }}-
 
-      # Manually running install tools instead of scripts/install_deps.sh
-      # Tools referenced in install_deps.sh script require Xcode 12.2 on macOS 10.15.
       - name: Prepare the tools
         run: |
-          brew update && brew bundle
-          carthage checkout
+          scripts/install_deps.sh
 
-      # Manually running xcodebuild instead of scripts/build.sh
-      # Tools referenced in install_deps.sh script require Xcode 12.2 on macOS 10.15.
       - name: "Run tests"
         run: |
-          ./scripts/carthage_xcode12 update --platform $CARTHAGE_PLATFORM
-          set -o pipefail && xcodebuild clean test -project $PROJECT_NAME -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES
-
-      - name: "Upload code coverage"
-        run: |
-          bash <(curl -s https://codecov.io/bash) -J 'PactConsumerSwift'
+          scripts/build.sh
 
   test_spm:
-    name: Test for SPM compatibility
+    name: Test for SPM
     runs-on: macOS-10.15
 
     steps:
@@ -74,9 +61,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
-
-      - name: Use Xcode 11.6
-        run: sudo xcode-select -switch /Applications/Xcode_11.6.app
 
       - name: Swift build
         run: |
@@ -93,9 +77,6 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Use Xcode 11.6
-        run: sudo xcode-select -switch /Applications/Xcode_11.6.app
-
       - name: "Cache dependencies"
         uses: actions/cache@v2
         with:
@@ -107,9 +88,8 @@ jobs:
 
       - name: Prepare Tools
         run: |
-          brew update && brew bundle
-          carthage checkout
+          scripts/install_deps.sh
 
       - name: Carthage build
         run: |
-          carthage build --no-skip-current --platform "ios,macos,tvos"
+          scripts/carthage_xcode12 build --no-skip-current --platform "ios,macos,tvos"
