--- a/.github/workflows/pull_request_xcode11_6.yml
+++ b/.github/workflows/pull_request_xcode11_6.yml
@@ -1,14 +1,9 @@
-name: Build
+name: Pull Request (Xcode 11.6)
 
 env:
   PROJECT_NAME: "PactConsumerSwift.xcodeproj"
 
-on:
-  push:
-    branches:
-      - main
-      - master
-  workflow_dispatch:
+on: [pull_request, workflow_dispatch]
 
 jobs:
   test_xcodebuild:
@@ -20,13 +15,13 @@ jobs:
       matrix:
         include:
           - scheme: "PactConsumerSwift iOS"
-            destination: "platform=iOS Simulator,name=iPhone 12 Pro"
+            destination: "platform=iOS Simulator,name=iPhone 8,OS=13.6"
             carthage_platform: ios
           - scheme: "PactConsumerSwift macOS"
             destination: "arch=x86_64"
             carthage_platform: macos
           - scheme: "PactConsumerSwift tvOS"
-            destination: "OS=14.2,name=Apple TV 4K (at 1080p)"
+            destination: "OS=13.4,name=Apple TV 4K (at 1080p)"
             carthage_platform: tvos
 
     env:
@@ -40,6 +35,9 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Use Xcode 11.6
+        run: sudo xcode-select -switch /Applications/Xcode_11.6.app
+
       - name: "Cache dependencies"
         uses: actions/cache@v2
         with:
@@ -49,20 +47,26 @@ jobs:
             ${{ runner.os }}-pact-
             ${{ runner.os }}-
 
+      # Manually running install tools instead of scripts/install_deps.sh
+      # Tools referenced in install_deps.sh script require Xcode 12.2 on macOS 10.15.
       - name: Prepare the tools
         run: |
-          scripts/install_deps.sh
+          brew update && brew bundle
+          carthage checkout
 
+      # Manually running xcodebuild instead of scripts/build.sh
+      # Tools referenced in install_deps.sh script require Xcode 12.2 on macOS 10.15.
       - name: "Run tests"
         run: |
-          scripts/build.sh
+          ./scripts/carthage_xcode12 update --platform $CARTHAGE_PLATFORM
+          set -o pipefail && xcodebuild clean test -project $PROJECT_NAME -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES
 
       - name: "Upload code coverage"
         run: |
           bash <(curl -s https://codecov.io/bash) -J 'PactConsumerSwift'
 
   test_spm:
-    name: Test for SPM
+    name: Test for SPM compatibility
     runs-on: macOS-10.15
 
     steps:
@@ -70,6 +74,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+
+      - name: Use Xcode 11.6
+        run: sudo xcode-select -switch /Applications/Xcode_11.6.app
 
       - name: Swift build
         run: |
@@ -86,6 +93,9 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Use Xcode 11.6
+        run: sudo xcode-select -switch /Applications/Xcode_11.6.app
+
       - name: "Cache dependencies"
         uses: actions/cache@v2
         with:
@@ -97,27 +107,9 @@ jobs:
 
       - name: Prepare Tools
         run: |
-          scripts/install_deps.sh
+          brew update && brew bundle
+          carthage checkout
 
       - name: Carthage build
         run: |
-          scripts/carthage_xcode12 build --no-skip-current --platform "ios,macos,tvos"
-
-  after_success:
-    needs: [test_xcodebuild, test_spm, test_carthage]
-    name: "Build example projects"
-    runs-on: ubuntu-20.04
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
-
-      - name: Trigger Demo Project builds
-        run: |
-          scripts/build_children.sh
-        env:
-          AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
-          GH_BUILD_CHILDREN_TOKEN: ${{ secrets.GH_BUILD_CHILDREN_TOKEN }}
-          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
+          carthage build --no-skip-current --platform "ios,macos,tvos"
