fix: Update install_deps script

--- a/.github/workflows/pull_request_xcode11_6.yml
+++ b/.github/workflows/pull_request_xcode11_6.yml
@@ -107,8 +107,7 @@ jobs:
 
       - name: Prepare Tools
         run: |
-          brew update && brew bundle
-          carthage checkout
+          scripts/install_deps.sh
 
       - name: Carthage build
         run: |
