--- a/.github/workflows/pull_request_xcode11_6.yml
+++ b/.github/workflows/pull_request_xcode11_6.yml
@@ -51,8 +51,7 @@ jobs:
       # Tools referenced in install_deps.sh script require Xcode 12.2 on macOS 10.15.
       - name: Prepare the tools
         run: |
-          brew update && brew bundle
-          carthage checkout
+          scripts/install_deps.sh
 
       # Manually running xcodebuild instead of scripts/build.sh
       # Tools referenced in install_deps.sh script require Xcode 12.2 on macOS 10.15.
